Changed Text imgs to seat black type

--- a/Seat/Cube3dSeatType.html
+++ b/Seat/Cube3dSeatType.html
@@ -521,6 +521,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(208px, 216px) rotate(0deg);
         transform: translate(0, 0) translate(208px, 216px) rotate(0deg);
 }
+/*#/#*//*#i4.i110.image.css:image/base/css*/
+#i110 { opacity: 1; }
+/*#/#*//*#i110.i111.positioning.css:positioning/base/css.1*/
+#i110 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 80px;
+        -ms-transform: translate(0, 0) translate(0px, 158px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 158px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 158px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 158px) rotate(0deg);
+}
 /*#/#*//*#i4.i91.shape.css:shape/base/css*/
 #i91 { background-color: #dedede; opacity: 0.00;
 }
@@ -532,15 +541,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(-1px, -1px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(-1px, -1px) rotate(0deg);
         transform: translate(0, 0) translate(-1px, -1px) rotate(0deg);
-}
-/*#/#*//*#i4.i104.image.css:image/base/css*/
-#i104 { opacity: 1; }
-/*#/#*//*#i104.i105.positioning.css:positioning/base/css.1*/
-#i104 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 80px;
-        -ms-transform: translate(0, 0) translate(0px, 150px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 150px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 150px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 150px) rotate(0deg);
 }
 /*#/#*//*#i50.i51.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i4 { cursor: pointer; }
@@ -572,6 +572,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 /*#/#*//*#i5.i66.image.css:image/base/css*/
 #i66 { opacity: 1;}
+/*#/#*//*#i66.i67.positioning.css:positioning/base/css.1*/
+#i66 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 90px; height: 32px;
+        -ms-transform: translate(0, 0) translate(208px, 215px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(208px, 215px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(208px, 215px) rotate(0deg);
+        transform: translate(0, 0) translate(208px, 215px) rotate(0deg);
+}
 /*#/#*//*#cube.css:cube/globalcss.1*/
 
 .transformation {
@@ -701,12 +708,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     background-color: #5AAAD2;
 }
 
-/*#/#*//*#i66.i67.positioning.css:positioning/base/css.1*/
-#i66 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 90px; height: 32px;
-        -ms-transform: translate(0, 0) translate(208px, 215px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(208px, 215px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(208px, 215px) rotate(0deg);
-        transform: translate(0, 0) translate(208px, 215px) rotate(0deg);
+/*#/#*//*#i5.i112.image.css:image/base/css*/
+#i112 { opacity: 1; }
+/*#/#*//*#i112.i113.positioning.css:positioning/base/css.1*/
+#i112 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 80px;
+        -ms-transform: translate(0, 0) translate(0px, 158px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 158px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 158px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 158px) rotate(0deg);
 }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
@@ -719,15 +728,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
-}
-/*#/#*//*#i5.i106.image.css:image/base/css*/
-#i106 { opacity: 1; }
-/*#/#*//*#i106.i107.positioning.css:positioning/base/css.1*/
-#i106 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 80px;
-        -ms-transform: translate(0, 0) translate(0px, 159px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 159px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 159px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 159px) rotate(0deg);
 }
 /*#/#*//*#i52.i53.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i5 { cursor: pointer; }
@@ -754,10 +754,19 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i68 { opacity: 1;}
 /*#/#*//*#i68.i69.positioning.css:positioning/base/css.1*/
 #i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 90px; height:32px;
-        -ms-transform: translate(0, 0) translate(208px, 215px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(208px, 215px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(208px, 215px) rotate(0deg);
-        transform: translate(0, 0) translate(208px, 215px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(208px, 216px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(208px, 216px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(208px, 216px) rotate(0deg);
+        transform: translate(0, 0) translate(208px, 216px) rotate(0deg);
+}
+/*#/#*//*#i6.i114.image.css:image/base/css*/
+#i114 { opacity: 1; }
+/*#/#*//*#i114.i115.positioning.css:positioning/base/css.1*/
+#i114 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 80px;
+        -ms-transform: translate(0, 0) translate(3px, 155px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(3px, 155px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(3px, 155px) rotate(0deg);
+        transform: translate(0, 0) translate(3px, 155px) rotate(0deg);
 }
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #dedede; opacity: 0.00;
@@ -770,15 +779,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i6.i108.image.css:image/base/css*/
-#i108 { opacity: 1; }
-/*#/#*//*#i108.i109.positioning.css:positioning/base/css.1*/
-#i108 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 80px;
-        -ms-transform: translate(0, 0) translate(0px, 151px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 151px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 151px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 151px) rotate(0deg);
 }
 /*#/#*//*#i54.i55.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i6 { cursor: pointer; }
@@ -805,10 +805,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i56" src="https://i.imgur.com/0kyQ0og.png"/>
 <!--#/#--><!--#i4.i64.image.html:image/html-->
 <img id="i64" src="https://i.imgur.com/KAJDmTN.jpg"/>
+<!--#/#--><!--#i4.i110.image.html:image/html-->
+<img id="i110" src="https://i.imgur.com/ZbE80m6.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
-<!--#/#--><!--#i4.i104.image.html:image/html-->
-<img id="i104" src="https://i.imgur.com/7NQfRU0.png"/>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i2.i5.cube-panel.html:cube-panel/html-->
@@ -819,10 +819,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i58" src="https://i.imgur.com/52mrdLF.png"/>
 <!--#/#--><!--#i5.i66.image.html:image/html-->
 <img id="i66" src="https://i.imgur.com/KAJDmTN.jpg"/>
+<!--#/#--><!--#i5.i112.image.html:image/html-->
+<img id="i112" src="https://i.imgur.com/n4CJcPV.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
-<!--#/#--><!--#i5.i106.image.html:image/html-->
-<img id="i106" src="https://i.imgur.com/038zgpw.png"/>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i2.i6.cube-panel.html:cube-panel/html-->
@@ -833,10 +833,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i60" src="https://i.imgur.com/zB41tH0.png"/>
 <!--#/#--><!--#i6.i68.image.html:image/html-->
 <img id="i68" src="https://i.imgur.com/KAJDmTN.jpg"/>
+<!--#/#--><!--#i6.i114.image.html:image/html-->
+<img id="i114" src="https://i.imgur.com/q4NMHHn.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
-<!--#/#--><!--#i6.i108.image.html:image/html-->
-<img id="i108" src="https://i.imgur.com/l1geDaA.png"/>
 <!--#/#-->
 </div>
 <!--#/#-->
@@ -880,6 +880,8 @@ document.getElementById('i2').addEventListener('showNext', function(e){
 
 /*#/#*//*#i4.i64.image.js:image/base/js*/
 
+/*#/#*//*#i4.i110.image.js:image/base/js*/
+
 /*#/#*//*#i91.i93.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i91').addEventListener('click', function(e){
@@ -887,8 +889,6 @@ document.getElementById('i91').addEventListener('click', function(e){
     window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
-/*#/#*//*#i4.i104.image.js:image/base/js*/
-
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i4').addEventListener('click', function(e){
@@ -907,7 +907,7 @@ document.getElementById('i95').addEventListener('click', function(e){
     window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
-/*#/#*//*#i5.i106.image.js:image/base/js*/
+/*#/#*//*#i5.i112.image.js:image/base/js*/
 
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
@@ -927,7 +927,7 @@ document.getElementById('i99').addEventListener('click', function(e){
     window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
-/*#/#*//*#i6.i108.image.js:image/base/js*/
+/*#/#*//*#i6.i114.image.js:image/base/js*/
 
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
 /* Name: On Click; */
@@ -963,19 +963,19 @@ customName: false;
 /*#/#*//*#i56.i57.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":false}/*!*/;
 /*#/#*//*#i4.i64.image.meta:image/meta*/
-name: KAJDmTN.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
+name: Logo; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
 /*#/#*//*#i64.i65.positioning.meta:positioning/meta.1*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i4.i110.image.meta:image/meta*/
+name: ZbE80m6.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i110.i111.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i91.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i91.i92.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i4.i104.image.meta:image/meta*/
-name: 7NQfRU0.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i104.i105.positioning.meta:positioning/meta.1*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i2.i5.cube-panel.meta:cube-panel/meta*/
     name: Cube Panel 2;
 /*#/#*//*#i5.i30.shape.meta:shape/meta*/
@@ -992,15 +992,15 @@ name: KAJDmTN.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i66.i67.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i5.i112.image.meta:image/meta*/
+name: n4CJcPV.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i112.i113.positioning.meta:positioning/meta.1*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i95.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i95.i96.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i5.i106.image.meta:image/meta*/
-name: 038zgpw.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i106.i107.positioning.meta:positioning/meta.1*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i2.i6.cube-panel.meta:cube-panel/meta*/
     name: Cube Panel 3;
 /*#/#*//*#i6.i40.shape.meta:shape/meta*/
@@ -1016,16 +1016,16 @@ data: /*!*/{"keepAspectRatio":false}/*!*/;
 name: KAJDmTN.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i68.i69.positioning.meta:positioning/meta.1*/
+data: /*!*/{"keepAspectRatio":false}/*!*/;
+/*#/#*//*#i6.i114.image.meta:image/meta*/
+name: q4NMHHn.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i114.i115.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i99.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i99.i100.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i6.i108.image.meta:image/meta*/
-name: l1geDaA.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i108.i109.positioning.meta:positioning/meta.1*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*/--><!--#/#-->
