Changed text imgs

--- a/Seat/Cube3dSeatType.html
+++ b/Seat/Cube3dSeatType.html
@@ -708,10 +708,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     background-color: #5AAAD2;
 }
 
-/*#/#*//*#i5.i112.image.css:image/base/css*/
-#i112 { opacity: 1; }
-/*#/#*//*#i112.i113.positioning.css:positioning/base/css.1*/
-#i112 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 80px;
+/*#/#*//*#i5.i116.image.css:image/base/css*/
+#i116 { opacity: 1; }
+/*#/#*//*#i116.i117.positioning.css:positioning/base/css.1*/
+#i116 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 80px;
         -ms-transform: translate(0, 0) translate(0px, 158px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, 158px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 158px) rotate(0deg);
@@ -723,11 +723,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i97.i98.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i95 { cursor: pointer; }
 /*#/#*//*#i95.i96.positioning.css:positioning/base/css.1*/
-#i95 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        transform: translate(0, 0) translate(0, 0) rotate(0deg);
+#i95 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i52.i53.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i5 { cursor: pointer; }
@@ -806,7 +806,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i64.image.html:image/html-->
 <img id="i64" src="https://i.imgur.com/KAJDmTN.jpg"/>
 <!--#/#--><!--#i4.i110.image.html:image/html-->
-<img id="i110" src="https://i.imgur.com/ZbE80m6.png"/>
+<img id="i110" src="https://i.imgur.com/qRnOpo4.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -819,8 +819,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i58" src="https://i.imgur.com/52mrdLF.png"/>
 <!--#/#--><!--#i5.i66.image.html:image/html-->
 <img id="i66" src="https://i.imgur.com/KAJDmTN.jpg"/>
-<!--#/#--><!--#i5.i112.image.html:image/html-->
-<img id="i112" src="https://i.imgur.com/n4CJcPV.png"/>
+<!--#/#--><!--#i5.i116.image.html:image/html-->
+<img id="i116" src="https://i.imgur.com/dh4s04e.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#-->
@@ -834,7 +834,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i68.image.html:image/html-->
 <img id="i68" src="https://i.imgur.com/KAJDmTN.jpg"/>
 <!--#/#--><!--#i6.i114.image.html:image/html-->
-<img id="i114" src="https://i.imgur.com/q4NMHHn.png"/>
+<img id="i114" src="https://i.imgur.com/2p8wuZd.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#-->
@@ -900,6 +900,8 @@ document.getElementById('i4').addEventListener('click', function(e){
 
 /*#/#*//*#i5.i66.image.js:image/base/js*/
 
+/*#/#*//*#i5.i116.image.js:image/base/js*/
+
 /*#/#*//*#i95.i97.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i95').addEventListener('click', function(e){
@@ -907,8 +909,6 @@ document.getElementById('i95').addEventListener('click', function(e){
     window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
-/*#/#*//*#i5.i112.image.js:image/base/js*/
-
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i5').addEventListener('click', function(e){
@@ -920,6 +920,8 @@ document.getElementById('i5').addEventListener('click', function(e){
 
 /*#/#*//*#i6.i68.image.js:image/base/js*/
 
+/*#/#*//*#i6.i114.image.js:image/base/js*/
+
 /*#/#*//*#i99.i102.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i99').addEventListener('click', function(e){
@@ -927,8 +929,6 @@ document.getElementById('i99').addEventListener('click', function(e){
     window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
-/*#/#*//*#i6.i114.image.js:image/base/js*/
-
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i6').addEventListener('click', function(e){
@@ -968,7 +968,7 @@ customName: 1;
 /*#/#*//*#i64.i65.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i110.image.meta:image/meta*/
-name: ZbE80m6.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: qRnOpo4.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i110.i111.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
@@ -992,10 +992,10 @@ name: KAJDmTN.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i66.i67.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i112.image.meta:image/meta*/
-name: n4CJcPV.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+/*#/#*//*#i5.i116.image.meta:image/meta*/
+name: dh4s04e.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
-/*#/#*//*#i112.i113.positioning.meta:positioning/meta.1*/
+/*#/#*//*#i116.i117.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i95.shape.meta:shape/meta*/
 name: Link;
@@ -1018,7 +1018,7 @@ customName: false;
 /*#/#*//*#i68.i69.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":false}/*!*/;
 /*#/#*//*#i6.i114.image.meta:image/meta*/
-name: q4NMHHn.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: 2p8wuZd.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i114.i115.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
