Changed Logo img, now with transparency

--- a/Seat/SeatType/Cube3d.html
+++ b/Seat/SeatType/Cube3d.html
@@ -466,7 +466,113 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#-->
 <!--#/#--><!--#css:common/css-->
 <style>
-/*#cube.css:cube/globalcss.1*/
+/*#i8.font-local.css:font/font-local/css*/
+/*#i8.i104.font-local.css:font-local/css*/
+@font-face {
+font-family: 'SEATBCN-Bold';
+src: url('fonts/');
+src: url('fonts/?#iefix') format('embedded-opentype'),
+url('fonts/SEATBCN-Bold.woff') format('woff'),
+url('fonts/') format('truetype'),
+url('fonts/') format('svg');
+}
+/*#/#*/
+/*#/#*//*#i2.cube.css:cube/base/css.1*/
+#i2.shape-holder {
+    position: absolute;
+
+    -ms-touch-action: none;
+    background: transparent;
+
+    opacity: 0;
+    -webkit-transition: opacity 0.5s;
+    -o-transition: opacity 0.5s;
+    -moz-transition: opacity 0.5s;
+    transition: opacity 0.5s, scale 0.8s;
+}
+
+#i2 .cube-Panel {
+    -webkit-backface-visibility:hidden;
+    -moz-backface-visibility:hidden;
+    -ms-backface-visibility: visible;
+    backface-visibility:hidden;
+    background-size: cover;
+    overflow: hidden;
+}
+
+/*#/#*//*#i4.i20.shape.css:shape/base/css*/
+#i20 { background-color: #fafafa; opacity: 1;
+}
+/*#/#*//*#i20.i21.positioning.css:positioning/base/css.1*/
+#i20 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+}
+/*#/#*//*#i4.i14.text.css:text/base/css*/
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family:'SEATBCN-Bold'; font-size: 20px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 5px;}
+/*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
+#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 305px; height: 74px;
+        -ms-transform: translate(-50%, -50%) translate(9px, 70px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(9px, 70px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(9px, 70px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(9px, 70px) rotate(0deg);
+}
+/*#/#*//*#i4.i56.image.css:image/base/css*/
+#i56 { opacity: 1; }
+/*#/#*//*#i56.i57.positioning.css:positioning/base/css.1*/
+#i56 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 300px; height: 150px;
+        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        transform: translate(0, 0) translate(0, 0) rotate(0deg);
+}
+/*#/#*//*#i4.i105.image.css:image/base/css*/
+#i105 { opacity: 1; }
+/*#/#*//*#i105.i106.positioning.css:positioning/base/css.1*/
+#i105 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 118px; height: 64px;
+        -ms-transform: translate(0, 0) translate(208px, 200px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(208px, 200px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(208px, 200px) rotate(0deg);
+        transform: translate(0, 0) translate(208px, 200px) rotate(0deg);
+}
+/*#/#*//*#i4.i91.shape.css:shape/base/css*/
+#i91 { background-color: #dedede; opacity: 0.00;
+}
+/*#/#*//*#i93.i94.actions-clicktag.css:actions-clicktag/base/css.1*/
+#i91 { cursor: pointer; }
+/*#/#*//*#i91.i92.positioning.css:positioning/base/css.1*/
+#i91 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(-1px, -1px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(-1px, -1px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(-1px, -1px) rotate(0deg);
+        transform: translate(0, 0) translate(-1px, -1px) rotate(0deg);
+}
+/*#/#*//*#i50.i51.actions-clicktag.css:actions-clicktag/base/css.1*/
+#i4 { cursor: pointer; }
+/*#/#*//*#i5.i30.shape.css:shape/base/css*/
+#i30 { background-color: #ffffff; opacity: 1;
+}
+/*#/#*//*#i30.i31.positioning.css:positioning/base/css.1*/
+#i30 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        transform: translate(0, 0) translate(0, 0) rotate(0deg);
+}
+/*#/#*//*#i5.i24.text.css:text/base/css*/
+#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family:'SEATBCN-Bold'; font-size: 20px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px;}
+/*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
+#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 271px; height: 63px;
+        -ms-transform: translate(-50%, -50%) translate(0px, 64px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 64px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 64px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 64px) rotate(0deg);
+}
+/*#/#*//*#i5.i58.image.css:image/base/css*/
+#i58 { opacity: 1; }
+/*#/#*//*#cube.css:cube/globalcss.1*/
 
 .transformation {
     -webkit-transform: translateZ(-1000px);
@@ -595,112 +701,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     background-color: #5AAAD2;
 }
 
-/*#/#*//*#i8.font-local.css:font/font-local/css*/
-/*#i8.i104.font-local.css:font-local/css*/
-@font-face {
-font-family: 'SEATBCN-Bold';
-src: url('fonts/');
-src: url('fonts/?#iefix') format('embedded-opentype'),
-url('fonts/SEATBCN-Bold.woff') format('woff'),
-url('fonts/') format('truetype'),
-url('fonts/') format('svg');
-}
-/*#/#*/
-/*#/#*//*#i2.cube.css:cube/base/css.1*/
-#i2.shape-holder {
-    position: absolute;
-
-    -ms-touch-action: none;
-    background: transparent;
-
-    opacity: 0;
-    -webkit-transition: opacity 0.5s;
-    -o-transition: opacity 0.5s;
-    -moz-transition: opacity 0.5s;
-    transition: opacity 0.5s, scale 0.8s;
-}
-
-#i2 .cube-Panel {
-    -webkit-backface-visibility:hidden;
-    -moz-backface-visibility:hidden;
-    -ms-backface-visibility: visible;
-    backface-visibility:hidden;
-    background-size: cover;
-    overflow: hidden;
-}
-
-/*#/#*//*#i4.i20.shape.css:shape/base/css*/
-#i20 { background-color: #fafafa; opacity: 1;
-}
-/*#/#*//*#i20.i21.positioning.css:positioning/base/css.1*/
-#i20 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
-/*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family:'SEATBCN-Bold'; font-size: 21px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 5px;}
-/*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
-#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 305px; height: 74px;
-        -ms-transform: translate(-50%, -50%) translate(9px, 70px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(9px, 70px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(9px, 70px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(9px, 70px) rotate(0deg);
-}
-/*#/#*//*#i4.i56.image.css:image/base/css*/
-#i56 { opacity: 1; }
-/*#/#*//*#i56.i57.positioning.css:positioning/base/css.1*/
-#i56 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 300px; height: 150px;
-        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        transform: translate(0, 0) translate(0, 0) rotate(0deg);
-}
-/*#/#*//*#i4.i64.image.css:image/base/css*/
-#i64 { opacity: 1;}
-/*#/#*//*#i64.i65.positioning.css:positioning/base/css.1*/
-#i64 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 90px; height: 32px;
-        -ms-transform: translate(0, 0) translate(208px, 216px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(208px, 216px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(208px, 216px) rotate(0deg);
-        transform: translate(0, 0) translate(208px, 216px) rotate(0deg);
-}
-/*#/#*//*#i4.i91.shape.css:shape/base/css*/
-#i91 { background-color: #dedede; opacity: 0.00;
-}
-/*#/#*//*#i93.i94.actions-clicktag.css:actions-clicktag/base/css.1*/
-#i91 { cursor: pointer; }
-/*#/#*//*#i91.i92.positioning.css:positioning/base/css.1*/
-#i91 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(-1px, -1px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(-1px, -1px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(-1px, -1px) rotate(0deg);
-        transform: translate(0, 0) translate(-1px, -1px) rotate(0deg);
-}
-/*#/#*//*#i50.i51.actions-clicktag.css:actions-clicktag/base/css.1*/
-#i4 { cursor: pointer; }
-/*#/#*//*#i5.i30.shape.css:shape/base/css*/
-#i30 { background-color: #fafafa; opacity: 1;
-}
-/*#/#*//*#i30.i31.positioning.css:positioning/base/css.1*/
-#i30 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        transform: translate(0, 0) translate(0, 0) rotate(0deg);
-}
-/*#/#*//*#i5.i24.text.css:text/base/css*/
-#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family:'SEATBCN-Bold'; font-size: 21px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px;}
-/*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
-#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 271px; height: 63px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 64px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 64px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 64px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 64px) rotate(0deg);
-}
-/*#/#*//*#i5.i58.image.css:image/base/css*/
-#i58 { opacity: 1; }
 /*#/#*//*#i58.i59.positioning.css:positioning/base/css.1*/
 
     
@@ -714,11 +714,11 @@ url('fonts/') format('svg');
 /*#/#*//*#i5.i66.image.css:image/base/css*/
 #i66 { opacity: 1;}
 /*#/#*//*#i66.i67.positioning.css:positioning/base/css.1*/
-#i66 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 90px; height: 32px;
-        -ms-transform: translate(0, 0) translate(208px, 215px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(208px, 215px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(208px, 215px) rotate(0deg);
-        transform: translate(0, 0) translate(208px, 215px) rotate(0deg);
+#i66 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 118px; height: 64px;
+        -ms-transform: translate(0, 0) translate(208px, 200px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(208px, 200px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(208px, 200px) rotate(0deg);
+        transform: translate(0, 0) translate(208px, 200px) rotate(0deg);
 }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
@@ -745,7 +745,7 @@ url('fonts/') format('svg');
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i6.i34.text.css:text/base/css*/
-#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family:'SEATBCN-Bold'; font-size: 21px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 5px;}
+#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family:'SEATBCN-Bold'; font-size: 20px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 5px;}
 /*#/#*//*#i34.i35.positioning.css:positioning/base/css.1*/
 #i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 285px; height: 74px;
         -ms-transform: translate(-50%, -50%) translate(5px, 69px) rotate(0deg);
@@ -765,11 +765,11 @@ url('fonts/') format('svg');
 /*#/#*//*#i6.i68.image.css:image/base/css*/
 #i68 { opacity: 1;}
 /*#/#*//*#i68.i69.positioning.css:positioning/base/css.1*/
-#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 90px; height:32px;
-        -ms-transform: translate(0, 0) translate(208px, 215px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(208px, 215px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(208px, 215px) rotate(0deg);
-        transform: translate(0, 0) translate(208px, 215px) rotate(0deg);
+#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 118px; height: 64px;
+        -ms-transform: translate(0, 0) translate(208px, 200px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(208px, 200px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(208px, 200px) rotate(0deg);
+        transform: translate(0, 0) translate(208px, 200px) rotate(0deg);
 }
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #dedede; opacity: 0.00;
@@ -808,8 +808,8 @@ url('fonts/') format('svg');
 <div id="i14">La potencia y nueva tecnología que tu camino necesita</div>
 <!--#/#--><!--#i4.i56.image.html:image/html-->
 <img id="i56" src="https://i.imgur.com/0kyQ0og.png"/>
-<!--#/#--><!--#i4.i64.image.html:image/html-->
-<img id="i64" src="https://i.imgur.com/KAJDmTN.jpg"/>
+<!--#/#--><!--#i4.i105.image.html:image/html-->
+<img id="i105" src="https://i.imgur.com/szV5kEH.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -823,7 +823,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/52mrdLF.png"/>
 <!--#/#--><!--#i5.i66.image.html:image/html-->
-<img id="i66" src="https://i.imgur.com/KAJDmTN.jpg"/>
+<img id="i66" src="https://i.imgur.com/szV5kEH.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#-->
@@ -837,7 +837,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/zB41tH0.png"/>
 <!--#/#--><!--#i6.i68.image.html:image/html-->
-<img id="i68" src="https://i.imgur.com/KAJDmTN.jpg"/>
+<img id="i68" src="https://i.imgur.com/szV5kEH.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#-->
@@ -881,7 +881,7 @@ document.getElementById('i2').addEventListener('showNext', function(e){
 });
 /*#/#*//*#i4.i56.image.js:image/base/js*/
 
-/*#/#*//*#i4.i64.image.js:image/base/js*/
+/*#/#*//*#i4.i105.image.js:image/base/js*/
 
 /*#/#*//*#i91.i93.actions.js:actions/base/js*/
 /* Name: On Click; */
@@ -963,10 +963,10 @@ name: 0kyQ0og.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i56.i57.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":false}/*!*/;
-/*#/#*//*#i4.i64.image.meta:image/meta*/
-name: KAJDmTN.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+/*#/#*//*#i4.i105.image.meta:image/meta*/
+name: szV5kEH.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
-/*#/#*//*#i64.i65.positioning.meta:positioning/meta.1*/
+/*#/#*//*#i105.i106.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i91.shape.meta:shape/meta*/
 name: Link;
@@ -988,7 +988,7 @@ customName: false;
 /*#/#*//*#i58.i59.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":false}/*!*/;
 /*#/#*//*#i5.i66.image.meta:image/meta*/
-name: KAJDmTN.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: szV5kEH.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i66.i67.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
@@ -1012,7 +1012,7 @@ customName: false;
 /*#/#*//*#i60.i61.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":false}/*!*/;
 /*#/#*//*#i6.i68.image.meta:image/meta*/
-name: KAJDmTN.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: szV5kEH.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i68.i69.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
