Changed Background color in panel 1 and panel 3

--- a/Seat/SeatType/Cube3d.html
+++ b/Seat/SeatType/Cube3d.html
@@ -501,7 +501,7 @@ url('fonts/') format('svg');
 }
 
 /*#/#*//*#i4.i20.shape.css:shape/base/css*/
-#i20 { background-color: #fafafa; opacity: 1;
+#i20 { background-color: #ffffff; opacity: 1;
 }
 /*#/#*//*#i20.i21.positioning.css:positioning/base/css.1*/
 #i20 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
@@ -735,7 +735,7 @@ url('fonts/') format('svg');
 /*#/#*//*#i52.i53.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i5 { cursor: pointer; }
 /*#/#*//*#i6.i40.shape.css:shape/base/css*/
-#i40 { background-color: #fafafa; opacity: 1;
+#i40 { background-color: #ffffff; opacity: 1;
 }
 /*#/#*//*#i40.i41.positioning.css:positioning/base/css.1*/
 #i40 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
